# twilio-morning-call-demo

./: LICENSE  README.md  demo.py  main.py  pyproject.toml
src/: openai_client.py  rss_parser.py
